<resources>
    <string name="app_name">Daily</string>
    <string name="login_title">登录Daily云端账户</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_name">Wi-Fi信号覆盖</string>
    <string name="user_email">wifi9984@foxmail.com</string>
    <string name="next_one">下一个事项：</string>
    <string name="add_event_title">添加一个事项：</string>
    <string name="add_event_hint">" 添加事项&#8230;"</string>
    <string name="pick_date">选择日期:</string>
    <string name="pick_time_start">开始时间:</string>
    <string name="pick_time_end">结束时间:</string>
    <string name="remind_pattern">提醒方式:</string>

    <string name="login_inform_words">用户名/手机号/邮箱</string>
    <string name="username">用户名</string>
    <string name="phonenumber">手机号</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="confirm">添加</string>
    <string name="cancel">取消</string>
    <string name="signin">登录</string>
    <string name="signup">注册</string>
</resources>
