<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="400dp"
    app:cardElevation="30dp"
    app:cardCornerRadius="0dp"
    app:cardBackgroundColor="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/add_event_title"
            android:textColor="@color/brown700"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:id="@+id/ll_add">

            <EditText
                android:id="@+id/edt_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:hint="@string/add_event_hint"
                android:textSize="20sp"
                android:textColor="@color/brown700"
                android:textColorHint="@color/grey500"
                android:theme="@style/MyEditText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/pick_date"
                    android:textColor="@color/brown700"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_pick_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_add"
                    android:textColor="@color/grey500"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/pick_time_start"
                    android:textColor="@color/brown700"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_pick_time_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/text_size_add"
                    android:textColor="@color/grey500"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/pick_time_end"
                    android:textColor="@color/brown700"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_pick_time_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/text_size_add"
                    android:textColor="@color/grey500"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/remind_pattern"
                    android:textColor="@color/brown700"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_select_pattern"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_add"
                    android:textColor="@color/grey500"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm_add"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="19dp"
            android:background="@null"
            android:text="@string/confirm"
            android:textColor="@color/brown700"
            android:textSize="17sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/btn_cancel_add"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/grey500"
            android:textSize="17sp"
            android:layout_toStartOf="@id/btn_confirm_add"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>
